<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:id="@+id/please_rate"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/please_rate_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/rate_header"/>


    <ImageView
        android:id="@+id/star_image_view"
        android:paddingBottom="0dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/please_rate_text_view"
        />
    <TextView
            android:id="@+id/please_rate_text_view2"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="5dp"
            android:layout_below="@+id/star_image_view"
            android:textSize="20sp"
            android:textColor="@color/textColorSecondary"
            android:text="@string/rate_text"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/please_rate_text_view2">

        <Button
            android:id="@+id/rate_button"
            android:width="100dp"

            android:text="@string/rate_now_button"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/remind_me_button"
            android:width="100dp"
            android:text="@string/rate_later_button"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
    <Button
        android:id="@+id/no_thanks_button"
        android:layout_centerHorizontal="true"
        android:text="@string/no_thanks_button"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout"
        />
    <Space
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_below="@+id/no_thanks_button"/>

</RelativeLayout>