<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:id="@+id/about_fragment"
              android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_title_view"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:paddingBottom="0dp"
            android:id="@+id/icon_holder_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <TextView
            android:id="@+id/about_text_view"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/about_contact_button"
            android:text="@string/about_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/about_rate_button"
            android:text="@string/about_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</LinearLayout>